@@ -13,7 +13,7 @@
 	<name>front</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
-		<java.version>21</java.version>
+		<java.version>22</java.version>
 	</properties>
 
 	<dependencyManagement>
@@ -124,6 +124,15 @@
 					<tagNameFormat>@{project.version}</tagNameFormat>
 					<releaseProfiles>release</releaseProfiles>
 					<arguments>-Prelease</arguments>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>22</source>
+					<target>22</target>
+					<compilerArgs>--enable-preview</compilerArgs>
 				</configuration>
 			</plugin>
 		</plugins>
